sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value x
if(x=false)
   ^AlgBubbleSort3:12: error: not found: value x
			x=true
                        ^